<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wx</groupId>
    <artifactId>wx-rpc-easy</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <vertx.version>4.5.7</vertx.version>        <!-- 4.5.1 -->
        <hutool.version>5.7.16</hutool.version>
        <lombok.version>1.18.16</lombok.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>${vertx.version}</version>
        </dependency>

        <!--&lt;!&ndash; https://mvnrepository.com/artifact/io.vertx/vertx-web &ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>io.vertx</groupId>-->
        <!--    <artifactId>vertx-web</artifactId>-->
        <!--    <version>4.5.7</version>-->
        <!--</dependency>-->


        <!--&lt;!&ndash; https://mvnrepository.com/artifact/io.vertx/vertx-codegen &ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>io.vertx</groupId>-->
        <!--    <artifactId>vertx-codegen</artifactId>-->
        <!--    <version>${vertx.version}</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>
</project>